Added ZRCP commands: open-menu, print-error
Added setting to force CHR$ 128 mode on ZX81

* Improvements:

Allow to not save configuration when exiting ZEsarUX
Allow to select normal ZEsarUX logo or X Anniversary logo
Allow to seng ZENG snapshots more frequently (even every 20 ms)
Allow to use cpu-step-mode from ZRCP on drivers stdout and simpletext

Improved ZX Vision:
- Changed left click mouse behaviour: when pressing left button mouse out of a window, it will close all menus.
  If you need to keep menu open and set focus on emulated machine, just left click and also press shift key.
- Improve window title background when not all buttons are visible
- Menus can no longer be minimized (that had no sense)
- Process switcher: unminimize windows when they are minimized and selecting them

* Fixes:

Fixed blockage when drawing Text Adventure Map and corrupted GAC adventure
Fixed timings of opcodes CP (HL), CP (IX+d), CP (IY+d)
Fixed bug on ZRCP when handling simultaneous connections
Fixed bug when printing on footer and column was out of bounds (exactly at column 32)
Fixed pressing keys '.' and ',' on menu when machine is ZX80 or ZX81

----------------------------------------


Version X - 10th Anniversary edition. 24 September 2023

This is a special edition to celebrate the 10 years old of ZEsarUX. Version is called "X" (actually is version 10.10)

* New things added:

Added new compiled versions: Ubuntu and Fedora
Added PCW colour modes
Added PCW Joysticks support: Kempston, Cascade, DKTronics, OPQASpace
Added screen previews of directories and compressed files on File Selector
Added flash support on screen previews on File Selector
Added rom file selection for any machine you select, rom file name is saved on configuration
Added another toy "ZXLife" to a new menu Procrastinate
Added Ascii Table window
Added Creator Info to ZSF snapshots
Added compilation system release to Compile info window
Added Docker support
Added another easter egg ;)

* Improvements:
