@@ -1497,7 +1497,7 @@ printf("\n"
 		"--noautoselectfileopt       Do not autoselect emulation options for known snap and tape files\n"
         "--no-fallbacktorealtape     Disable fallback to real tape setting\n"
         "--anyflagloading            Enables tape load routine to load without knowing block flag\n"
-        "--autorewind                Autorewind standard tape when reaching end of tape\n"
+        "--autorewind                Autorewind tape when reaching end of tape\n"
 		"--simulaterealload          Simulate real tape loading\n"
 		"--simulaterealloadfast      Enable fast simulate real tape loading\n"
         "--deletetzxpauses           Do not follow pauses on TZX tapes\n"
