@@ -17,6 +17,7 @@ Allow to not save configuration when exiting ZEsarUX
 Allow to select normal ZEsarUX logo or X Anniversary logo
 Allow to seng ZENG snapshots more frequently (even every 20 ms)
 Allow to use cpu-step-mode from ZRCP on drivers stdout and simpletext
+Allow autorewind setting for real tape too
 
 Improved ZX Vision:
 - Changed left click mouse behaviour: when pressing left button mouse out of a window, it will close all menus.
